# feishu-bridge

./: .codex-commit-a-review-v2.txt  .codex-commit-a-review-v3.txt  .codex-commit-a-review.txt  .codex-commit-b-prompt.txt  .codex-review-prompt.txt  .codex-review-round2.txt  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: CLAUDE.md  compact-context.md
.claude/ctx/: architecture.md  commands.md  known-pitfalls.md  project-overview.md
.github/workflows/: publish.yml
.specs/: .gitignore
Mac-App/: project.yml
Mac-App/FeishuBridge/: App.swift  Info.plist
Mac-App/FeishuBridge.xcodeproj/: project.pbxproj
Mac-App/FeishuBridgeTests/: BridgeStatusTests.swift  ConfigManagerTests.swift  StatusPollerTests.swift  UnixSocketTransportTests.swift
contrib/: feishu-bridge-launcher.sh  feishu-bridge@.service  migration-switch.sh
feishu_bridge/: __init__.py  __main__.py  bg_paths.py  bg_supervisor.py  bg_synthetic_turn.py  bg_tasks_db.py  cli.py  cli_bridge.py  commands.py  config.py  control_api.py  ledger.py  log_buffer.py  main.py  ollama_proxy.py  parsers.py  paths.py  pi_memory.py  project_detector.py  quota.py  runtime.py  runtime_alma.py  runtime_local.py  runtime_omp.py  runtime_pi.py  runtime_state.py  session_journal.py  session_resume.py  state_thread_projects.py  task_runner.py  ui.py  updater.py  worker.py
feishu_bridge/api/: __init__.py  auth.py  bitable.py  calendar.py  client.py  comments.py  docs.py  drive.py  mail.py  search.py  sheets.py  tasks.py  wiki.py
feishu_bridge/data/: __init__.py  bridge-settings.json  cli_prompt.md  cli_prompt_summary.md
feishu_bridge/workflows/: __init__.py  agent_pool.py  done_workflow.py  memory_gc_workflow.py  plan_workflow.py  registry.py  runtime.py  storage.py
scripts/: agents-skill-drift.py  auto-version.sh  release.sh  ship.sh
tests/: smoke_path_z.py  staging_config_empty_claude.json  staging_config_empty_codex.json  staging_config_empty_pi.json
tests/integration/: bg_test_helpers.py  test_bg_crash_windows.py  test_bg_tasks_e2e.py  test_cancel.py  test_db_recovery.py  test_pid_reuse.py  test_runtime_state_e2e.py  test_sqlite_busy.py  test_tasks.py
tests/unit/: test_agent_pool.py  test_agents_skill_drift.py  test_alma_runner.py  test_alma_runner_tool_only.py  test_bg_supervisor.py  test_bg_synthetic_turn.py  (+33 more)
(+82 files in other folders)
