[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feishu-bridge"
version = "0.2.0"
description = "Feishu ↔ AI Agent bridge with 40+ API integrations"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "lark-oapi>=1.5",
    "requests",
    "cryptography",
]

[project.optional-dependencies]
dev = ["pytest", "python-dotenv"]

[project.scripts]
feishu-bridge = "feishu_bridge.main:main"
feishu-cli = "feishu_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["feishu_bridge"]
