[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feishu-bridge"
version = "2026.04.15.3"
description = "Feishu ↔ Claude Code / Codex bridge — remote AI agent control + 80+ Feishu API commands"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["feishu", "lark", "claude", "ai", "chatbot", "bridge"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Chat",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "lark-oapi>=1.5",
    "requests",
    "cryptography",
]

[project.urls]
Homepage = "https://github.com/feir/feishu-bridge"
Repository = "https://github.com/feir/feishu-bridge"
Issues = "https://github.com/feir/feishu-bridge/issues"

[project.optional-dependencies]
dev = ["pytest", "python-dotenv"]

[project.scripts]
feishu-bridge = "feishu_bridge.main:main"
feishu-cli = "feishu_bridge.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["feishu_bridge"]
